# codeastro_project

./: .readthedocs.yaml  Differential_Photometry.txt  README.md  README.rst  demo.py  differential_photometry.ipynb  differential_photometry.py  photometry-old.ipynb  photometry.ipynb  pyproject.toml  setup.py  test.txt
differential_photometry/: __init__.py  demo.py  init.py
docs/: README.rst  conf.py  differential_photometry.rst  requirements.txt
docs/_build/doctrees/: differential_photometry.doctree  environment.pickle  index.doctree
docs/_build/html/: differential_photometry.html  genindex.html  index.html
docs/_build/html/_sources/: index.rst.txt
docs2/_build/doctrees/: differential_photometry.doctree  environment.pickle
docs2/_build/html/: .buildinfo  differential_photometry.html  genindex.html  objects.inv  py-modindex.html  search.html  searchindex.js
