[differential_photometry]
name = "differential_photometry"
version = "0.1.0"
description = "Create a pyproject.toml file for an existing project."
authors = [
    "Emily Whittaker <emilywhittaker@g.ucla.edu>"
]
license = "none"
readme = "README.md"
python = "^3.6"
homepage = "https://github.com/emilywhittaker1/codeastro_project"
repository = "https://github.com/emilywhittaker1/codeastro_project"
documentation = "https://github.com/emilywhittaker1/codeastro_project"

keywords = ["photometry", "variable", "star", "pyproject.toml"]

classifiers = [
    "Topic :: Software Development"
]

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"
